fix blockquote first line spacing, fixes #115

--- a/assets/static/css/content.css
+++ b/assets/static/css/content.css
@@ -27,7 +27,6 @@ blockquote {
 }
 blockquote:before {
   color: #ccc;
-  content: '';
   font-size: 4em;
   line-height: 0.1em;
   vertical-align: -0.4em;
